--- a/pentevo/unreal/Unreal/Unreal.vcproj
+++ b/pentevo/unreal/Unreal/Unreal.vcproj
@@ -1189,7 +1189,7 @@
 			</File>
 		</Filter>
 		<Filter
-			Name="Libs"
+			Name="Resources"
 			Filter="rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav"
 			UniqueIdentifier="{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}"
 			>
@@ -1199,6 +1199,14 @@
 			</File>
 			<File
 				RelativePath=".\lib\dxerr8.lib"
+				>
+			</File>
+			<File
+				RelativePath=".\res\main.ico"
+				>
+			</File>
+			<File
+				RelativePath=".\Unreal.rc"
 				>
 			</File>
 		</Filter>
