Unreal: added GDI driver, re-ordered driver/render functions

--- a/pentevo/unreal/Unreal/cfg/Unreal.ini
+++ b/pentevo/unreal/Unreal/cfg/Unreal.ini
@@ -185,7 +185,7 @@ video=double
 
 ; driver for video=normal/double/triple/quad/text
 
-driver=blt
+driver=gdi
 
 ; video driver:
 ;   ddraw - direct access to video memory, fullscreen only, fastest
