Unreal: drawer functions moved to vector table, added Pentagon MC drawer, added scanline renderer, some optimizations, old renders and drivers commented

--- a/pentevo/unreal/Unreal/Unreal.rc
+++ b/pentevo/unreal/Unreal/Unreal.rc
@@ -299,11 +299,11 @@ IDD_VIDEO DIALOGEX 0, 0, 186, 160
 STYLE DS_SETFONT | DS_3DLOOK | WS_CHILD | WS_BORDER
 FONT 8, "MS Sans Serif", 0, 0, 0x1
 BEGIN
-    LTEXT           "&filter",IDC_STATIC,7,11,23,8
-    COMBOBOX        IDC_VIDEOFILTER,45,9,134,60,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
-    LTEXT           "ren&der to",IDC_REND_TITLE,7,58,29,8
-    COMBOBOX        IDC_RENDER,45,56,85,60,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
-    CONTROL         "&low quality",IDC_FAST_SL,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,133,57,46,10
+    LTEXT           "Renderer",IDC_STATIC,7,22,38,8
+    COMBOBOX        IDC_VIDEOFILTER,62,20,117,60,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
+    LTEXT           "Diplay Driver",IDC_REND_TITLE,7,9,41,8
+    COMBOBOX        IDC_RENDER,62,7,117,60,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
+    CONTROL         "&low quality",IDC_FAST_SL,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,62,142,46,10
     CONTROL         "&Update border for all filters",IDC_UPDB,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,73,103,10
     CONTROL         "VS&ync",IDC_FLIP,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,86,32,10
     CONTROL         "Flash-&Color",IDC_FLASH,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,113,50,10
@@ -327,10 +327,10 @@ BEGIN
     LTEXT           "4x",IDC_VSCALE_TITLE3,167,141,8,8
     COMBOBOX        IDC_SCRSHOT,45,95,41,60,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
     LTEXT           "scrshot to",IDC_REND_TITLE2,7,97,32,8
-    COMBOBOX        IDC_PALETTE,45,41,134,60,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
-    LTEXT           "pale&tte",IDC_STATIC,7,43,31,8
-    COMBOBOX        IDC_BORDERSIZE,45,23,134,60,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
-    LTEXT           "border",IDC_B_TITLE2,7,25,29,8
+    COMBOBOX        IDC_PALETTE,54,54,125,60,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
+    LTEXT           "pale&tte",IDC_STATIC,7,56,31,8
+    COMBOBOX        IDC_BORDERSIZE,62,34,117,60,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
+    LTEXT           "Window Size",IDC_B_TITLE2,7,36,49,8
 END
 
 IDD_EFF7 DIALOG 0, 0, 203, 126
