--- a/pentevo/unreal/Unreal/Unreal.vcxproj.filters
+++ b/pentevo/unreal/Unreal/Unreal.vcxproj.filters
@@ -21,6 +21,15 @@
     <None Include="z80_main.inl">
       <Filter>Souces</Filter>
     </None>
+    <None Include="res\cur00000.cur" />
+    <None Include="res\cur00001.cur" />
+    <None Include="res\cur00002.cur" />
+    <None Include="res\cur00003.cur" />
+    <None Include="res\cur00004.cur" />
+    <None Include="res\cur00005.cur" />
+    <None Include="res\cur00006.cur" />
+    <None Include="res\cur00007.cur" />
+    <None Include="res\cur00008.cur" />
   </ItemGroup>
   <ItemGroup>
     <Manifest Include="res\Unreal.manifest">
