Unreal: added ATM multicolor drawer, added video modes setting for ATM and AlCo Pentagon, added ROMs

--- a/pentevo/unreal/Unreal/cfg/Unreal.ini
+++ b/pentevo/unreal/Unreal/cfg/Unreal.ini
@@ -403,11 +403,10 @@ GS=rom\bootgs.rom
 
 ; 64/128/512/1024K ROM images (single file)
 
-ATM1=rom\atm103rs.rom
+ATM1=rom\atm1.rom
 
 ;ATM2=Xbios103.rom
-;ATM2=bios_1_07_13.rom
-ATM2=rom\glukatm.rom
+ATM2=rom\atm2.rom
 
 ATM3=rom\zxevo.rom
 
