Unreal: added default spec palette load on reset, re-factored drawers, added 384x304, 6912x2, added 4x render, fixed frame sync on no-audio

--- a/pentevo/unreal/Unreal/Unreal.vcxproj
+++ b/pentevo/unreal/Unreal/Unreal.vcxproj
@@ -172,6 +172,7 @@
     <ClInclude Include="dx.h" />
     <ClInclude Include="dxerr.h" />
     <ClInclude Include="dxerr8.h" />
+    <ClInclude Include="dxrcopy.h" />
     <ClInclude Include="dxrend.h" />
     <ClInclude Include="dxrframe.h" />
     <ClInclude Include="dxr_text.h" />
