--- a/pentevo/unreal/Unreal/cfg/Unreal.ini
+++ b/pentevo/unreal/Unreal/cfg/Unreal.ini
@@ -11,6 +11,7 @@ HighPriority=1  ; boost process priority, disabled on ShareCPU=0
 ;
 ; high memory: PENTAGON, SCORPION, PROFSCORP, PROFI, ATM450, ATM710, KAY, ATM3, TSL
 HIMEM=TSL
+; HIMEM=PENTAGON
 ; HIMEM=ATM3
 ; memory size, KB. pentagon,atm2: 128/256/512/1024, scorp,kay: 256/1024,
 ; ATM450: 512/1024, profi: 1024 only
@@ -384,7 +385,7 @@ CDROM=;ASPI;SPTI  ; SPTI (native WinNT) or ASPI (use 3rd-party library wnaspi32.
 ; master device. specify image filename or <MODEL,SERIAL> to use real drive
 Image0=d:\VM\ZX\wc.hdd
 CHS0=1572/16/63  ; max size, accessible through CHS. not used for real drive
-LBA0=1584968     ; max size, accessible through LBA. not used for real drive
+LBA0=0	     ; max size, accessible through LBA. not used for real drive
 HD0RO=0         ; read only flag
 CD0=0            ; 1 if image is cdrom
 
@@ -403,6 +404,8 @@ GS=rom\bootgs.rom
 
 ; 64/128/512/1024K ROM images (single file)
 
+PENTAGON=rom\pentagon.rom
+
 ATM1=rom\atm1.rom
 
 ;ATM2=Xbios103.rom
@@ -420,7 +423,7 @@ SCORP=rom\scorpion.rom
 PROFROM=rom\scorp_prof401.ROM:0
 
 ; standard KAY 64K rom
-KAY=rom\kay1024s.rom
+KAY=rom\kay1024.rom
 
 ; TS-config
 TSL=rom\ts-bios.rom
@@ -445,8 +448,8 @@ dos=rom\dos6_10e.rom
 title=Pentagon-128 + TR-DOS
 128=rom\128_low.rom
 sos=rom\48for128.rom
-dos=rom\DOS6_12E_patch.ROM
-sys=rom\services.rom
+dos=rom\trdos504t.ROM
+sys=rom\service.rom
 
 [ROM.GLUK]
 title=Mr Gluk Reset Service
@@ -485,12 +488,19 @@ title=ZX-Spectrum 128K
 128=rom\128.rom:0
 sos=rom\128.rom:1
 
+[ROM.ATM1]
+title=ATM1
+sos=rom\atm1.rom:0
+dos=rom\atm1.rom:1
+128=rom\atm1.rom:2
+sys=rom\atm1.rom:3
+
 [ROM.ATM2]
-Title=BIOS1.07.13 for ATM2
-sos=rim\bios_1_07_13.rom:0
-dos=rim\bios_1_07_13.rom:1
-128=rim\bios_1_07_13.rom:2
-sys=rim\bios_1_07_13.rom:3
+title=ATM2
+sos=rom\atm2.rom:0
+dos=rom\atm2.rom:1
+128=rom\atm2.rom:2
+sys=rom\atm2.rom:3
 
 [ROM.ATM3]
 title=ATM3
