Tools: SPG Builder - fixed size calculation error, modified demo

--- a/pentevo/tools/spgbld/src/spgbld/test/demo001.ini
+++ b/pentevo/tools/spgbld/src/spgbld/test/demo001.ini
@@ -1,12 +1,14 @@
 Desc = TS-Conf scroller demo by TS-Labs
 Start = 26624
-Stack = 26624
+Stack = 26600
 Resident = 23296
 Page3 = 0
 Clock = 3
 INT = 1
 Pager = 0
+Block = 49152, 5, scr.bin
 Block = 49152, 10, font32_0.bin
 Block = 49152, 11, font32_1.bin
 Block = 59392, 5, demo001.001.bin
 Block = 49152, 2, demo001.002.bin
+Block = 23552, 5, 5c00.bin
