--- a/pentevo/unreal/Unreal/cfg/Unreal.ini
+++ b/pentevo/unreal/Unreal/cfg/Unreal.ini
@@ -261,7 +261,7 @@ Fq=44100        ; check maximum sampling rate in your soundcard manual
                 ; setting freq not supported by hardware
                 ; will cause resampling and degrade quality and performance
 
-GSType=BASS     ; BASS, Z80 or NONE
+GSType=z80     ; BASS, Z80 or NONE
 GSReset=1       ; reinit GS on reset
 
 SD=0            ; enable/disable soundrive
@@ -595,7 +595,7 @@ RAR=rar e -y "%s"
 
 main.exit=ALT F4           ; why do this?
 main.lockmouse=SHIFT ESC   ; read kempston mouse in windowed mode
-main.monitor=ESC           ; for hackers only
+main.monitor=TIL           ; for hackers only
 main.selectfilter=F4       ; select video filter
 main.selectdriver=SHIFT F4 ; select video driver for some filters
 main.fullscreen=ALT ENTER  ; toggle full-screen on/off
@@ -643,13 +643,13 @@ main.size1=ALT 1           ; set normal window size (in windowed mode)
 main.size2=ALT 2           ; set double window size (in windowed mode)
 main.sizem=ALT 3           ; maximize window (in windowed mode)
 main.memsearch=ALT F6      ; search in memory for changed values (cheats, etc)
-mon.cpu=CONTROL TIL        ; switch to next cpu
 main.savevideo=CONTROL F8  ; save video
 
 ; keys in all monitor windows
 
+mon.cpu=CONTROL TIL       ; switch to next cpu
 mon.exit=ALT F4           ;
-mon.emul=ESC              ; back to emulation
+mon.emul=TIL              ; back to emulation
 mon.bpdialog=ALT C        ; conditional breakpoints dialog
 mon.gs=ALT G              ; gs status dialog
 mon.pokedialog=ALT P      ; enter poke(s) F6 is already used
