Unreal: added ATM3 NMI breakpoints

--- a/pentevo/unreal/Unreal/cfg/Unreal.ini
+++ b/pentevo/unreal/Unreal/cfg/Unreal.ini
@@ -615,12 +615,12 @@ main.screenshot=ALT F8     ; screenshot
 main.savevideo=CONTROL F8  ; save video
 main.reset=F12             ; reset to [MISC]Reset=DOS/BASIC/MENU/SYS
 main.reset128=CONTROL SHIFT F12 ; reset to basic 128
-main.resetsys=SHIFT F12      ; reset to service ROM
+main.resetsys=SHIFT F12    ; reset to service ROM
 main.reset48=ALT SHIFT F12 ; reset to basic 48 with locked 128k memory
-main.resetbasic=ALT F12  ; reset to basic 48 with unlocked 128k memory
+main.resetbasic=ALT F12    ; reset to basic 48 with unlocked 128k memory
 main.resetdos=CONTROL F12  ; reset to TR-DOS
 main.resetcache=ALT CONTROL F12    ; reset to cache
-main.nmi=ALT F11           ;ALT SHIFT F11     ; NMI without ROM switching
+main.nmi=F11               ;ALT SHIFT F11     ; NMI without ROM switching
 main.nmidos=CONTROL F11    ; TR-DOS magic
 main.nmicache=ALT F11      ; NMI in cache
 main.help=F1               ; show keys
